Trying to fix the alignment o the buttons

--- a/Basic template.css
+++ b/Basic template.css
@@ -834,6 +834,10 @@ https://stackoverflow.com/questions/45142164/google-charts-how-to-increase-width
     left: -2.5%;
     top: -5px;
   }
+  
+  #accordion button, #accordion button:hover, #accordion button:active, #accordion button:visited {
+    transform: translateY(1%);
+  }
 }
 
 @media (max-width: 320px) {
